  an Interchange page processor to hang until it's killed by Interchange's
  periodic housekeeping routine. If several of these requests are received
  in quick succession then it could be possible to disable all of the page
  processors, rendering Interchange unresponsive for a while. Fixed by
  Kevin Walsh; pointed out by Donald Alexander.

Standard demo
-------------

* Updated Discover Card logo. Provided by Steve Graham.

* Various special_pages/missing.html fixes:
  - Fixed broken admin 404 error page (which came from Standard).
  - Removed duplicate, sometimes-bogus MV_PREV_PAGE display.
  - Eliminated double-interpolation of page comparison.

* Increased compatibility with XHTML.

* Cleaned up splash page and fixed broken links.


------------------------------------------------------------------------------


Interchange 5.4.1 released on 2006-05-27.


Widgets
-------

* Fixed regression in htmlarea widget which kept it from working with MSIE or
  browsers claiming to be compatible.

Tags
----

* add-gpg-key: Made parsing of results message more tolerant.
  Patch by Gert van der Spoel <ic@3edge.com>.

* pay-cert-redeem: Fixed rounding error that could make total comparisons
  wrong.

Configuration
-------------

* Check for "GoogleBot", rather than just "Google", in the RobotUA list, to
  prevent confusion with other UA values such as "GoogleToolbar" etc.

* Removed never-used SOAP_Host directive.

Profiles
--------

* Fixed a profile parsing bug:

  When reading an OrderProfile from an external config file, for instance,
  etc/profiles.login or similar if there is a comment line immediately
  preceding the __NAME__ identifier then the first line of the profile is
  commented out. Actually any line preceding the __NAME__ line will silently
  be prepended to the first line of the profile; it just so happens a comment
  would be the likely offender.

  For example:

  # following profile confirms user input
  __NAME__ Login