@@ -19,6 +19,12 @@ Core
   processors, rendering Interchange unresponsive for a while. Fixed by
   Kevin Walsh; pointed out by Donald Alexander.
 
+Options
+-------
+
+* Fixed spurious hidden form element output for matrix options with separate
+  widgets and report option set, patch provided by Peter Ajamian.
+
 Standard demo
 -------------
 
